--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:https": "cross-env HTTPS=true react-scripts start",
+    "start:network": "cross-env HTTPS=true HOST=0.0.0.0 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
