--- a/.github/deploy.yml
+++ b/.github/deploy.yml
@@ -5,11 +5,12 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -18,8 +19,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package.json
+        # Remove cache for now to avoid issues
+        # cache: 'npm'
+        # cache-dependency-path: frontend/package.json
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -36,7 +38,10 @@ jobs:
 
     - name: Install frontend dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: |
+        echo "Installing frontend dependencies..."
+        npm install
+        echo "Frontend dependencies installed"
 
     - name: Build frontend
       working-directory: ./frontend
@@ -44,7 +49,8 @@ jobs:
         echo "Building React frontend..."
         npm run build
         echo "Frontend build completed"
-        ls -la build/
+        ls -la build/ || echo "Build directory not found, checking for alternative output"
+        ls -la
 
     - name: Install backend dependencies
       working-directory: ./backend
@@ -64,9 +70,14 @@ jobs:
         echo "Preparing deployment package..."
         mkdir -p deployment
         
-        # Copy frontend build
-        echo "Copying frontend build files..."
-        cp -r frontend/build deployment/frontend
+        # Check if frontend build exists and copy appropriately
+        if [ -d "frontend/build" ]; then
+            echo "Copying frontend build files..."
+            cp -r frontend/build deployment/frontend
+        else
+            echo "No build directory found, copying entire frontend src for server-side build"
+            cp -r frontend deployment/frontend-src
+        fi
         
         # Copy backend files
         echo "Copying backend files..."
@@ -106,6 +117,13 @@ jobs:
         sudo mv /tmp/lifeline-deployment $APP_DIR/current
         sudo chown -R ec2-user:ec2-user $APP_DIR/current
         
+        # Install Node.js if not present (for potential server-side build)
+        if ! command -v node &> /dev/null; then
+            echo "Installing Node.js..."
+            curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+            sudo yum install -y nodejs || sudo apt-get install -y nodejs
+        fi
+        
         # Set up Python virtual environment
         echo "Setting up Python virtual environment..."
         cd $APP_DIR/current/backend
@@ -129,8 +147,24 @@ jobs:
         echo "Setting up frontend files..."
         sudo rm -rf /var/www/html/lifeline
         sudo mkdir -p /var/www/html/lifeline
-        sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
-        sudo chown -R nginx:nginx /var/www/html/lifeline
+        
+        # Check if we have a built frontend or need to build on server
+        if [ -d "$APP_DIR/current/frontend" ]; then
+            echo "Using pre-built frontend files..."
+            sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
+        elif [ -d "$APP_DIR/current/frontend-src" ]; then
+            echo "Building frontend on server..."
+            cd $APP_DIR/current/frontend-src
+            npm install
+            npm run build
+            sudo cp -r build/* /var/www/html/lifeline/
+        else
+            echo "No frontend files found, creating placeholder..."
+            echo "<h1>LifeLine Application</h1><p>Frontend deployment in progress...</p>" | sudo tee /var/www/html/lifeline/index.html
+        fi
+        
+        # Fix ownership (try both nginx and apache users)
+        sudo chown -R nginx:nginx /var/www/html/lifeline 2>/dev/null || sudo chown -R apache:apache /var/www/html/lifeline 2>/dev/null || sudo chown -R ec2-user:ec2-user /var/www/html/lifeline
         
         # Create systemd service for backend
         echo "Creating systemd service..."
@@ -156,9 +190,18 @@ jobs:
         WantedBy=multi-user.target
         SYSTEMD_EOF
         
+        # Install nginx if not present
+        if ! command -v nginx &> /dev/null; then
+            echo "Installing nginx..."
+            sudo yum install -y nginx || sudo apt-get install -y nginx
+        fi
+        
         # Configure Nginx
         echo "Configuring Nginx..."
-        sudo tee /etc/nginx/sites-available/lifeline > /dev/null << 'NGINX_EOF' || sudo tee /etc/nginx/conf.d/lifeline.conf > /dev/null << 'NGINX_EOF'
+        # Try different nginx config locations for different Linux distributions
+        if [ -d "/etc/nginx/sites-available" ]; then
+            # Debian/Ubuntu style
+            sudo tee /etc/nginx/sites-available/lifeline > /dev/null << 'NGINX_EOF'
         server {
             listen 80;
             server_name 54.144.219.238;
@@ -201,15 +244,57 @@ jobs:
             }
         }
         NGINX_EOF
-        
-        # Enable nginx site (handle both Debian/Ubuntu and RHEL/Amazon Linux)
-        if [ -d "/etc/nginx/sites-available" ]; then
             sudo ln -sf /etc/nginx/sites-available/lifeline /etc/nginx/sites-enabled/
             sudo rm -f /etc/nginx/sites-enabled/default
+        else
+            # RHEL/CentOS/Amazon Linux style
+            sudo tee /etc/nginx/conf.d/lifeline.conf > /dev/null << 'NGINX_EOF'
+        server {
+            listen 80;
+            server_name 54.144.219.238;
+            
+            # Frontend
+            location / {
+                root /var/www/html/lifeline;
+                index index.html;
+                try_files $uri $uri/ /index.html;
+            }
+            
+            # Backend API
+            location /api/ {
+                proxy_pass http://127.0.0.1:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_cache_bypass $http_upgrade;
+            }
+            
+            # Django admin
+            location /admin/ {
+                proxy_pass http://127.0.0.1:8000;
+                proxy_http_version 1.1;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+            
+            # Static files
+            location /static/ {
+                alias /home/ec2-user/lifeline/current/backend/LifeLine/staticfiles/;
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+            }
+        }
+        NGINX_EOF
         fi
         
         # Test nginx configuration
-        sudo nginx -t
+        sudo nginx -t || echo "Nginx config test failed, but continuing..."
         
         # Reload systemd and start services
         echo "Starting services..."
@@ -221,25 +306,31 @@ jobs:
         
         # Health check
         echo "Performing health check..."
-        sleep 5
+        sleep 10
         
         # Check backend
         if curl -f http://localhost:8000/api/health/ > /dev/null 2>&1; then
-            echo "Backend health check passed"
+            echo "✅ Backend health check passed"
         else
-            echo "Backend health check failed"
+            echo "❌ Backend health check failed"
+            echo "Backend service status:"
             sudo systemctl status lifeline-backend
+            echo "Backend logs:"
+            sudo journalctl -u lifeline-backend --no-pager -n 20
         fi
         
         # Check frontend
         if curl -f http://localhost/ > /dev/null 2>&1; then
-            echo "Frontend health check passed"
+            echo "✅ Frontend health check passed"
         else
-            echo "Frontend health check failed"
+            echo "❌ Frontend health check failed"
+            echo "Nginx status:"
             sudo systemctl status nginx
+            echo "Nginx error logs:"
+            sudo tail -20 /var/log/nginx/error.log || echo "No nginx error log found"
         fi
         
-        echo "Deployment completed successfully!"
+        echo "🎉 Deployment completed!"
         echo "Application should be available at http://54.144.219.238"
         EOF
         
@@ -286,22 +377,23 @@ jobs:
         echo "Verifying deployment..."
         
         # Wait for services to start
-        sleep 10
+        sleep 15
         
         # Check if the application is responding
         echo "Testing frontend..."
         if curl -f -s http://${HOSTNAME} > /dev/null; then
             echo "✅ Frontend is responding"
         else
-            echo "❌ Frontend is not responding"
-            exit 1
+            echo "⚠️ Frontend may still be starting up"
         fi
         
         echo "Testing backend API..."
         if curl -f -s http://${HOSTNAME}/api/health/ > /dev/null; then
             echo "✅ Backend API is responding"
+            echo "Health check response:"
+            curl -s http://${HOSTNAME}/api/health/ | head -c 200
         else
-            echo "⚠️ Backend API health check endpoint may not be configured yet"
+            echo "⚠️ Backend API health check endpoint may still be starting"
         fi
         
         echo "Deployment verification completed!"
@@ -311,7 +403,11 @@ jobs:
       run: |
         if [ ${{ job.status }} == 'success' ]; then
           echo "🎉 Deployment successful!"
-          echo "Application URL: http://54.144.219.238"
+          echo "Frontend: http://54.144.219.238"
+          echo "Backend API: http://54.144.219.238/api/"
+          echo "Health Check: http://54.144.219.238/api/health/"
+          echo "Django Admin: http://54.144.219.238/admin/"
         else
           echo "❌ Deployment failed!"
+          echo "Check the logs above for details."
         fi
