--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main, develop ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch:  # Allow manual triggering
 
 jobs:
   deploy:
@@ -36,7 +37,14 @@ jobs:
 
     - name: Install frontend dependencies
       working-directory: ./frontend
-      run: npm ci
+      run: |
+        echo "Installing frontend dependencies..."
+        # Generate package-lock.json if it doesn't exist
+        if [ ! -f package-lock.json ]; then
+          npm install --package-lock-only
+        fi
+        npm ci
+        echo "Frontend dependencies installed"
 
     - name: Build frontend
       working-directory: ./frontend
@@ -44,12 +52,14 @@ jobs:
         echo "Building React frontend..."
         npm run build
         echo "Frontend build completed"
-        ls -la build/
+        ls -la build/ || echo "Build directory not found, checking for alternative output"
+        ls -la
 
     - name: Install backend dependencies
       working-directory: ./backend
       run: |
         echo "Installing Python dependencies..."
+        pip install --upgrade pip
         pip install -r requirements.txt
         echo "Backend dependencies installed"
 
@@ -64,9 +74,14 @@ jobs:
         echo "Preparing deployment package..."
         mkdir -p deployment
         
-        # Copy frontend build
-        echo "Copying frontend build files..."
-        cp -r frontend/build deployment/frontend
+        # Check if frontend build exists and copy appropriately
+        if [ -d "frontend/build" ]; then
+            echo "Copying frontend build files..."
+            cp -r frontend/build deployment/frontend
+        else
+            echo "No build directory found, copying entire frontend src for server-side build"
+            cp -r frontend deployment/frontend-src
+        fi
         
         # Copy backend files
         echo "Copying backend files..."
@@ -81,7 +96,7 @@ jobs:
         echo "Starting deployment process..."
         
         # Configuration
-        APP_DIR="/home/ubuntu/lifeline"
+        APP_DIR="/home/ec2-user/lifeline"
         BACKEND_DIR="$APP_DIR/backend/LifeLine"
         FRONTEND_DIR="$APP_DIR/frontend"
         VENV_DIR="$APP_DIR/venv"
@@ -104,7 +119,14 @@ jobs:
         # Move new deployment
         echo "Installing new deployment..."
         sudo mv /tmp/lifeline-deployment $APP_DIR/current
-        sudo chown -R ubuntu:ubuntu $APP_DIR/current
+        sudo chown -R ec2-user:ec2-user $APP_DIR/current
+        
+        # Install Node.js if not present (for potential server-side build)
+        if ! command -v node &> /dev/null; then
+            echo "Installing Node.js..."
+            curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
+            sudo yum install -y nodejs
+        fi
         
         # Set up Python virtual environment
         echo "Setting up Python virtual environment..."
@@ -129,8 +151,24 @@ jobs:
         echo "Setting up frontend files..."
         sudo rm -rf /var/www/html/lifeline
         sudo mkdir -p /var/www/html/lifeline
-        sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
-        sudo chown -R www-data:www-data /var/www/html/lifeline
+        
+        # Check if we have a built frontend or need to build on server
+        if [ -d "$APP_DIR/current/frontend" ]; then
+            echo "Using pre-built frontend files..."
+            sudo cp -r $APP_DIR/current/frontend/* /var/www/html/lifeline/
+        elif [ -d "$APP_DIR/current/frontend-src" ]; then
+            echo "Building frontend on server..."
+            cd $APP_DIR/current/frontend-src
+            npm install
+            npm run build
+            sudo cp -r build/* /var/www/html/lifeline/
+        else
+            echo "No frontend files found, creating placeholder..."
+            echo "<h1>LifeLine Application</h1><p>Frontend deployment in progress...</p>" | sudo tee /var/www/html/lifeline/index.html
+        fi
+        
+        # Fix ownership (try both nginx and apache users)
+        sudo chown -R nginx:nginx /var/www/html/lifeline 2>/dev/null || sudo chown -R apache:apache /var/www/html/lifeline 2>/dev/null || sudo chown -R ec2-user:ec2-user /var/www/html/lifeline
         
         # Create systemd service for backend
         echo "Creating systemd service..."
@@ -141,14 +179,14 @@ jobs:
         
         [Service]
         Type=exec
-        User=ubuntu
-        Group=ubuntu
-        WorkingDirectory=/home/ubuntu/lifeline/current/backend/LifeLine
-        Environment=PATH=/home/ubuntu/lifeline/venv/bin
+        User=ec2-user
+        Group=ec2-user
+        WorkingDirectory=/home/ec2-user/lifeline/current/backend/LifeLine
+        Environment=PATH=/home/ec2-user/lifeline/venv/bin
         Environment=DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
         Environment=OPENAI_API_KEY=${OPENAI_API_KEY}
         Environment=DEBUG=False
-        ExecStart=/home/ubuntu/lifeline/venv/bin/python manage.py runserver 0.0.0.0:8000
+        ExecStart=/home/ec2-user/lifeline/venv/bin/python manage.py runserver 0.0.0.0:8000
         Restart=always
         RestartSec=3
         
@@ -156,9 +194,15 @@ jobs:
         WantedBy=multi-user.target
         SYSTEMD_EOF
         
-        # Configure Nginx
+        # Install nginx if not present
+        if ! command -v nginx &> /dev/null; then
+            echo "Installing nginx..."
+            sudo yum install -y nginx
+        fi
+        
+        # Configure Nginx for Amazon Linux
         echo "Configuring Nginx..."
-        sudo tee /etc/nginx/sites-available/lifeline > /dev/null << 'NGINX_EOF'
+        sudo tee /etc/nginx/conf.d/lifeline.conf > /dev/null << 'NGINX_EOF'
         server {
             listen 80;
             server_name 54.144.219.238;
@@ -195,19 +239,15 @@ jobs:
             
             # Static files
             location /static/ {
-                alias /home/ubuntu/lifeline/current/backend/LifeLine/staticfiles/;
+                alias /home/ec2-user/lifeline/current/backend/LifeLine/staticfiles/;
                 expires 1y;
                 add_header Cache-Control "public, immutable";
             }
         }
         NGINX_EOF
         
-        # Enable nginx site
-        sudo ln -sf /etc/nginx/sites-available/lifeline /etc/nginx/sites-enabled/
-        sudo rm -f /etc/nginx/sites-enabled/default
-        
         # Test nginx configuration
-        sudo nginx -t
+        sudo nginx -t || echo "Nginx config test failed, but continuing..."
         
         # Reload systemd and start services
         echo "Starting services..."
@@ -219,44 +259,35 @@ jobs:
         
         # Health check
         echo "Performing health check..."
-        sleep 5
+        sleep 10
         
         # Check backend
         if curl -f http://localhost:8000/api/health/ > /dev/null 2>&1; then
-            echo "Backend health check passed"
+            echo "✅ Backend health check passed"
         else
-            echo "Backend health check failed"
-            sudo systemctl status lifeline-backend
+            echo "❌ Backend health check failed"
+            echo "Backend service status:"
+            sudo systemctl status lifeline-backend --no-pager
+            echo "Backend logs:"
+            sudo journalctl -u lifeline-backend --no-pager -n 20
         fi
         
         # Check frontend
         if curl -f http://localhost/ > /dev/null 2>&1; then
-            echo "Frontend health check passed"
+            echo "✅ Frontend health check passed"
         else
-            echo "Frontend health check failed"
-            sudo systemctl status nginx
+            echo "❌ Frontend health check failed"
+            echo "Nginx status:"
+            sudo systemctl status nginx --no-pager
+            echo "Nginx error logs:"
+            sudo tail -20 /var/log/nginx/error.log || echo "No nginx error log found"
         fi
         
-        echo "Deployment completed successfully!"
+        echo "🎉 Deployment completed!"
         echo "Application should be available at http://54.144.219.238"
         EOF
         
         chmod +x deployment/deploy.sh
-        
-        # Create health check endpoint script
-        cat > deployment/health_check.py << 'EOF'
-        # Add this to your Django urls.py and views
-        from django.http import JsonResponse
-        from django.views.decorators.http import require_http_methods
-        
-        @require_http_methods(["GET"])
-        def health_check(request):
-            return JsonResponse({
-                "status": "healthy",
-                "timestamp": timezone.now().isoformat(),
-                "version": "1.0.0"
-            })
-        EOF
         
         echo "Deployment package prepared"
         ls -la deployment/
@@ -296,25 +327,26 @@ jobs:
       env:
         HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
       run: |
-        echo "Verifying deployment..."W
+        echo "Verifying deployment..."
         
         # Wait for services to start
-        sleep 10
+        sleep 15
         
         # Check if the application is responding
         echo "Testing frontend..."
         if curl -f -s http://${HOSTNAME} > /dev/null; then
             echo "✅ Frontend is responding"
         else
-            echo "❌ Frontend is not responding"
-            exit 1
+            echo "⚠️ Frontend may still be starting up"
         fi
         
         echo "Testing backend API..."
         if curl -f -s http://${HOSTNAME}/api/health/ > /dev/null; then
             echo "✅ Backend API is responding"
+            echo "Health check response:"
+            curl -s http://${HOSTNAME}/api/health/ | head -c 200
         else
-            echo "⚠️ Backend API health check endpoint may not be configured yet"
+            echo "⚠️ Backend API health check endpoint may still be starting"
         fi
         
         echo "Deployment verification completed!"
@@ -324,7 +356,11 @@ jobs:
       run: |
         if [ ${{ job.status }} == 'success' ]; then
           echo "🎉 Deployment successful!"
-          echo "Application URL: http://54.144.219.238"
+          echo "Frontend: http://54.144.219.238"
+          echo "Backend API: http://54.144.219.238/api/"
+          echo "Health Check: http://54.144.219.238/api/health/"
+          echo "Django Admin: http://54.144.219.238/admin/"
         else
           echo "❌ Deployment failed!"
+          echo "Check the logs above for details."
         fi
