--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    # Ensure package-lock.json exists before Node.js setup
+    - name: Check for package-lock.json
+      run: |
+        if [ ! -f frontend/package-lock.json ]; then
+          echo "Generating package-lock.json for caching..."
+          cd frontend
+          npm install --package-lock-only
+          cd ..
+        fi
+
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
