--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,7 +85,7 @@ jobs:
         # Copy backend files
         cp -r backend deployment/backend
         
-        # Create optimized deployment script
+        # Create deployment script
         cat > deployment/deploy.sh << 'EOF'
         #!/bin/bash
         set -e
@@ -94,24 +94,16 @@ jobs:
         
         # Configuration
         APP_DIR="/home/ec2-user/lifeline"
-        BACKEND_DIR="$APP_DIR/backend/LifeLine"
         VENV_DIR="$APP_DIR/venv"
+        
+        # Update system packages
+        echo "📦 Updating system packages..."
+        sudo yum update -y
+        sudo yum install -y python3 python3-pip nginx git
         
         # Create application directory
         sudo mkdir -p $APP_DIR
         cd $APP_DIR
-        
-        echo "📦 Installing system dependencies..."
-        # Update system and install required packages
-        sudo yum update -y
-        sudo yum install -y python3 python3-pip nginx git
-        
-        # Install Node.js (Amazon Linux 2)
-        if ! command -v node &> /dev/null; then
-            echo "Installing Node.js..."
-            curl -fsSL https://rpm.nodesource.com/setup_18.x | sudo bash -
-            sudo yum install -y nodejs
-        fi
         
         echo "🛑 Stopping existing services..."
         sudo systemctl stop lifeline-backend 2>/dev/null || echo "Backend service not running"
@@ -264,6 +256,99 @@ jobs:
         
         chmod +x deployment/deploy.sh
 
+    - name: Debug Connection Issues
+      env:
+        EC2_HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
+      run: |
+        echo "🔍 Debugging connection to EC2..."
+        echo "Target hostname: ${EC2_HOSTNAME}"
+        echo "Runner IP: $(curl -s ifconfig.me 2>/dev/null || echo 'Unknown')"
+        
+        # Test basic connectivity
+        echo "Testing basic connectivity..."
+        if timeout 10 ping -c 3 ${EC2_HOSTNAME} > /dev/null 2>&1; then
+          echo "✅ EC2 instance is reachable via ping"
+        else
+          echo "❌ EC2 instance is not reachable via ping"
+        fi
+        
+        # Test if port 22 is open
+        echo "Testing SSH port (22)..."
+        if timeout 10 nc -zv ${EC2_HOSTNAME} 22 2>/dev/null; then
+          echo "✅ SSH port 22 is open"
+        else
+          echo "❌ SSH port 22 is not accessible"
+        fi
+        
+        # Test HTTP port for comparison
+        echo "Testing HTTP port (80)..."
+        if timeout 10 nc -zv ${EC2_HOSTNAME} 80 2>/dev/null; then
+          echo "✅ HTTP port 80 is open"
+        else
+          echo "❌ HTTP port 80 is not accessible"
+        fi
+
+    - name: Setup SSH
+      env:
+        EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+      run: |
+        echo "🔑 Setting up SSH connection..."
+        
+        # Create SSH directory
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
+        
+        # Setup private key
+        echo "$EC2_SSH_PRIVATE_KEY" > ~/.ssh/private_key
+        chmod 600 ~/.ssh/private_key
+        
+        # Validate private key format
+        if ssh-keygen -l -f ~/.ssh/private_key > /dev/null 2>&1; then
+          echo "✅ SSH private key is valid"
+        else
+          echo "❌ SSH private key format is invalid"
+          echo "Please ensure the EC2_SSH_PRIVATE_KEY secret contains the full .pem file content"
+        fi
+        
+        # Configure SSH known hosts
+        echo "🌐 Configuring SSH known hosts..."
+        ssh-keyscan -H ${{ secrets.EC2_HOSTNAME }} >> ~/.ssh/known_hosts 2>/dev/null || true
+
+    - name: Test SSH Connection 
+      env:
+        EC2_HOSTNAME: ${{ secrets.EC2_HOSTNAME }}
+        EC2_USER_NAME: ${{ secrets.EC2_USER_NAME }}
+      run: |
+        echo "🔍 Testing SSH connection..."
+        
+        # Test connection with detailed verbose output
+        for i in {1..3}; do
+          echo "SSH attempt $i/3..."
+          if timeout 45 ssh -vvv -o ConnectTimeout=20 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 -o StrictHostKeyChecking=no -o BatchMode=yes -i ~/.ssh/private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} 'echo "SSH connection successful - $(date)" && uptime' 2>&1; then
+            echo "✅ SSH connection established successfully"
+            break
+          else
+            echo "❌ SSH connection attempt $i failed"
+            if [ $i -eq 3 ]; then
+              echo ""
+              echo "🚨 SSH Connection Failed - Troubleshooting Steps:"
+              echo "1. Verify EC2 instance is running in AWS Console"
+              echo "2. Check if EC2 has the correct public IP: ${EC2_HOSTNAME}"
+              echo "3. Verify security group allows SSH (port 22) from your source"
+              echo "4. Ensure EC2 instance has the correct key pair associated"
+              echo "5. Check if EC2 instance is in a public subnet with internet gateway"
+              echo ""
+              echo "Common fixes:"
+              echo "- Add security group rule: SSH (22) from 0.0.0.0/0"
+              echo "- Restart EC2 instance if it's been running long"
+              echo "- Check Network ACLs aren't blocking traffic"
+              echo ""
+              exit 1
+            fi
+            sleep 10
+          fi
+        done
+
     - name: Deploy to EC2
       env:
         EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
@@ -274,40 +359,13 @@ jobs:
       run: |
         echo "🚀 Deploying to EC2 instance..."
         
-        # Set up SSH with better error handling
-        echo "$EC2_SSH_PRIVATE_KEY" > private_key
-        chmod 600 private_key
-        
-        # Add EC2 host to known hosts to avoid prompts
-        ssh-keyscan -H $EC2_HOSTNAME >> ~/.ssh/known_hosts 2>/dev/null || true
-        
-        # Test SSH connection with timeout and retries
-        echo "Testing SSH connection..."
-        for i in {1..3}; do
-          if timeout 30 ssh -o ConnectTimeout=10 -o BatchMode=yes -i private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} 'echo "SSH connection successful"'; then
-            echo "✅ SSH connection established"
-            break
-          else
-            echo "❌ SSH connection attempt $i failed"
-            if [ $i -eq 3 ]; then
-              echo "❌ All SSH connection attempts failed. Please check:"
-              echo "  - EC2 instance is running"
-              echo "  - Security group allows SSH (port 22) from GitHub Actions IPs"
-              echo "  - SSH key is correct"
-              echo "  - Hostname/IP is correct"
-              exit 1
-            fi
-            sleep 10
-          fi
-        done
-        
         # Copy deployment package
         echo "📦 Copying deployment package..."
-        scp -o ConnectTimeout=30 -i private_key -r deployment ${EC2_USER_NAME}@${EC2_HOSTNAME}:/tmp/lifeline-deployment
+        scp -o ConnectTimeout=30 -o ServerAliveInterval=10 -i ~/.ssh/private_key -r deployment ${EC2_USER_NAME}@${EC2_HOSTNAME}:/tmp/lifeline-deployment
         
         # Execute deployment script
         echo "🔧 Executing deployment script..."
-        ssh -o ConnectTimeout=30 -i private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} "
+        ssh -o ConnectTimeout=30 -o ServerAliveInterval=10 -i ~/.ssh/private_key ${EC2_USER_NAME}@${EC2_HOSTNAME} "
           export DJANGO_SECRET_KEY='${DJANGO_SECRET_KEY}'
           export OPENAI_API_KEY='${OPENAI_API_KEY}'
           chmod +x /tmp/lifeline-deployment/deploy.sh
