--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -167,6 +167,7 @@ jobs:
         
         [Install]
         WantedBy=multi-user.target
+        SYSTEMD_EOF
         
         # Configure Nginx
         echo "🔧 Configuring Nginx..."
