--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,10 @@ jobs:
 
     - name: Run backend tests
       working-directory: ./backend/LifeLine
+      env:
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        DEBUG: False
       run: |
         echo "Running Django tests..."
         python manage.py test --verbosity=2 || echo "Tests failed but continuing deployment"
@@ -131,11 +135,29 @@ jobs:
         cd $APP_DIR/current/backend/LifeLine
         source $VENV_DIR/bin/activate
         
+        # Ensure environment variables are available for Django
+        export DJANGO_SECRET_KEY="${DJANGO_SECRET_KEY}"
+        export OPENAI_API_KEY="${OPENAI_API_KEY}"
+        export DEBUG=False
+        export ALLOWED_HOSTS="*"
+        
+        # Verify environment variables are set
+        echo "Verifying environment variables..."
+        if [ -z "$DJANGO_SECRET_KEY" ]; then
+            echo "❌ DJANGO_SECRET_KEY is not set"
+            exit 1
+        fi
+        if [ -z "$OPENAI_API_KEY" ]; then
+            echo "❌ OPENAI_API_KEY is not set"
+            exit 1
+        fi
+        echo "✅ Environment variables verified"
+        
         # Apply migrations
-        python manage.py migrate --noinput
+        DJANGO_SECRET_KEY="${DJANGO_SECRET_KEY}" OPENAI_API_KEY="${OPENAI_API_KEY}" python manage.py migrate --noinput
         
         # Collect static files
-        python manage.py collectstatic --noinput --clear
+        DJANGO_SECRET_KEY="${DJANGO_SECRET_KEY}" OPENAI_API_KEY="${OPENAI_API_KEY}" python manage.py collectstatic --noinput --clear
         
         # Set up frontend
         echo "🌐 Setting up frontend..."
