--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,9 +72,10 @@ jobs:
         DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         DEBUG: False
+        PYTHONPATH: .
       run: |
         echo "Running Django tests..."
-        python manage.py test --verbosity=2 || echo "Tests failed but continuing deployment"
+        python manage.py test api --verbosity=2 || echo "Tests failed but continuing deployment"
 
     - name: Prepare deployment package
       run: |
@@ -154,9 +155,11 @@ jobs:
         echo "✅ Environment variables verified"
         
         # Apply migrations
+        echo "📋 Applying migrations..."
         DJANGO_SECRET_KEY="${DJANGO_SECRET_KEY}" OPENAI_API_KEY="${OPENAI_API_KEY}" python manage.py migrate --noinput
         
         # Collect static files
+        echo "📁 Collecting static files..."
         DJANGO_SECRET_KEY="${DJANGO_SECRET_KEY}" OPENAI_API_KEY="${OPENAI_API_KEY}" python manage.py collectstatic --noinput --clear
         
         # Set up frontend
