--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -195,7 +195,7 @@ jobs:
         Group=ec2-user
         WorkingDirectory=/home/ec2-user/lifeline/current/backend/LifeLine
         EnvironmentFile=/etc/lifeline.env
-        ExecStart=/home/ec2-user/lifeline/venv/bin/gunicorn LifeLine.wsgi:application --bind 0.0.0.0:8000
+        ExecStart=/bin/bash -c 'source /home/ec2-user/lifeline/venv/bin/activate && exec /home/ec2-user/lifeline/venv/bin/gunicorn LifeLine.wsgi:application --bind 0.0.0.0:8000'
         Restart=always
         RestartSec=3
         StandardOutput=journal
