--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -209,12 +209,15 @@ jobs:
         After=network.target
         
         [Service]
-        Type=exec
+        Type=simple
         User=ec2-user
         Group=ec2-user
         WorkingDirectory=/home/ec2-user/lifeline/current/backend/LifeLine
-        EnvironmentFile=/etc/lifeline.env
-        ExecStart=/bin/bash -c 'source /home/ec2-user/lifeline/venv/bin/activate && exec /home/ec2-user/lifeline/venv/bin/gunicorn LifeLine.wsgi:application --bind 0.0.0.0:8000'
+        Environment=DJANGO_SECRET_KEY='${DJANGO_SECRET_KEY}'
+        Environment=OPENAI_API_KEY='${OPENAI_API_KEY}'
+        Environment=DEBUG=False
+        Environment=ALLOWED_HOSTS='*'
+        ExecStart=/home/ec2-user/lifeline/venv/bin/gunicorn LifeLine.wsgi:application --bind 0.0.0.0:8000 --workers 3 --timeout 60
         Restart=always
         RestartSec=3
         StandardOutput=journal
